--- a/style.css
+++ b/style.css
@@ -150,6 +150,7 @@ body{
     }
     
     #add{
+        display:none;
         margin-left:20px;
         margin-top:25px;
         height:50px;
@@ -162,5 +163,6 @@ body{
     .info-container{
         display:block;
     }
+    
     
 }
