--- a/style.css
+++ b/style.css
@@ -151,10 +151,10 @@ body{
     
     #add{
         display:none;
-        margin-left:20px;
+        /* margin-left:20px;
         margin-top:25px;
         height:50px;
-        width:150px;
+        width:150px; */
     }
     .banner{
         display:none;
